packages/ui-theme/icloud-theme/src/antd-vars-patch.less
/**
 * 主题，定制antd主题
 */

// -------- Colors -----------
@primary-color: var(--theme-primary-color);
@info-color: var(--theme-info-color);
@success-color: var(--theme-success-color);
@error-color: var(--theme-error-color);
@warning-color: var(--theme-warning-color);

// Color used by default to control hover and active backgrounds and for
// alert info backgrounds.
@primary-1: #eef0fd; // replace tint(@primary-color, 90%)
@primary-2: #dce1fa; // replace tint(@primary-color, 80%)
@primary-5: #7387eb; // color used to control the text color in many active and hover states, replace tint(@primary-color, 20%)
@primary-7: #5971e7; // replace shade(@primary-color, 5%)

// Base Scaffolding Variables
// ---
// Background color for `<body>`
@body-background: var(--theme-body-bg);
// Base background color for most components
@component-background: var(--theme-component-bg);
@font-family: "Helvetica Neue", "Helvetica", "Arial", "PingFangSC-Regular", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", "sans-serif";
@code-family: Consolas, Menlo, Courier, monospace;
@heading-color: var(--theme-heading-color);
@text-color: var(--theme-text-color);
@text-color-secondary: var(--theme-text-color-secondary);
@font-variant-base: normal; // https://github.com/ant-design/ant-design/issues/12690
@font-size-sm: 12px;
@font-size-base: 12px;
@font-size-lg: 14px;
@font-size-xl: 16px;
@line-height-base: 1.5;
@border-radius-base: 0;
@border-radius-sm: 0;
@height-base: 30px;
@height-lg: 40px;
@height-sm: 24px;

// The background colors for active and hover states for things like
// list items or table cells.
@item-hover-bg: var(--theme-secondary-color-hover);
@item-active-bg: var(--theme-secondary-color-hover);

// LINK
@link-color: var(--link-color);
@link-hover-color: var(--link-hover-color);
@link-active-color: var(--link-active-color);
@link-decoration: none;
@link-hover-decoration: none;

// Border color
// 元素边框
@border-color-base: var(--theme-border-color-base);
@border-color-split: var(--theme-border-color-split); // split border inside a component
@border-color-inverse: var(--theme-border-color-inverse);
@border-width-base: 1px;
@border-style-base: solid;

@background-color-light: var(--theme-bg-color-light); // background of header and selected item
@background-color-base: var(--theme-bg-color-base);

// Disabled states
// ---
@disabled-color: var(--theme-disabled-color);
@disabled-bg: var(--theme-disabled-bg);

// Input
// ---
@input-height-sm: @height-sm;
@input-height-base: @height-base;
@input-height-lg: @height-lg;
@input-hover-border-color: var(--theme-primary-color-hover);
@input-placeholder-color: var(--theme-placeholder-color);
@input-disabled-bg: var(--theme-disabled-bg);
@input-addon-bg: var(--color-gray-3);

// Table
// ---
@table-row-hover-bg: var(--table-row-hover-bg);
@table-header-bg: var(--table-header-bg);
@table-header-color: var(--table-header-color);
@table-font-size: @font-size-sm;
@table-font-size-sm: @font-size-sm;
@table-font-size-md: @font-size-sm;
@table-padding-horizontal: 10px;
@table-padding-vertical: ((40px - @font-size-base * 1.5) / 2); // UE要求行号40，行高= {padding-vertical} * 2 + {font-size} * 1.5
@table-selected-row-bg: var(--color-brand-1);
@table-selected-row-hover-bg: var(--color-brand-1);

// Menu
// ---
@menu-inline-toplevel-item-height: 40px;
@menu-item-height: 40px;
@menu-collapsed-width: 80px;
@menu-bg: var(--menu-bg);
@menu-popup-bg: var(--menu-popup-bg);
@menu-item-color: var(--menu-item-color);
@menu-highlight-color: var(--menu-highlight-color);
@menu-item-active-bg: var(--menu-item-active-bg);
@menu-item-active-border-width: 3px;
@menu-item-group-title-color: var(--menu-item-group-title-color);
@menu-icon-size: @font-size-base;
@menu-icon-size-lg: @font-size-lg;
// 这个颜色不在色盘里，由于menu我们目前没有规范，所以menu需要保持与antd一致
// 而我们调整了@background-color-light这个变量，会改变menu的背景颜色
// 因此在这里覆盖回去，以保证和antd一致
@menu-inline-submenu-bg: #fafafa;

// Collapse
// ---
@collapse-header-padding: 12px 16px;
@collapse-header-padding-extra: 42px;
@collapse-header-bg: var(--collapse-header-bg);
@collapse-content-bg: var(--collapse-content-bg);

// Select
// ---
@select-item-selected-color: var(--theme-primary-color);
@select-item-selected-bg: var(--select-item-selected-bg);
@select-item-active-bg: var(--select-item-active-bg);
@select-item-selected-font-weight: normal;
@select-selection-item-bg: var(--color-gray-3);

// Alert
// ---
@alert-success-border-color: var(--alert-success-border-color);
@alert-success-bg-color: var(--alert-success-bg-color);
@alert-success-icon-color: var(--alert-success-icon-color);
@alert-info-border-color: var(--alert-info-border-color);
@alert-info-bg-color: var(--alert-info-bg-color);
@alert-info-icon-color: var(--alert-info-icon-color);
@alert-warning-border-color: var(--alert-warning-border-color);
@alert-warning-bg-color: var(--alert-warning-bg-color);
@alert-warning-icon-color: var(--alert-warning-icon-color);
@alert-error-border-color: var(--alert-error-border-color);
@alert-error-bg-color: var(--alert-error-bg-color);
@alert-error-icon-color: var(--alert-error-icon-color);
@alert-message-color: var(--theme-heading-color);
@alert-text-color: var(--color-brand-10);
@alert-close-color: var(--theme-icon-color);
@alert-with-description-padding: var(--alert-with-description-padding);
@alert-with-description-icon-top: var(--alert-with-description-icon-top);

// Tree
@tree-directory-selected-color: var(--tree-directory-selected-color, #fff);
@tree-directory-selected-bg: var(--tree-directory-selected-bg, --theme-primary-color);
@tree-node-hover-bg: var(--tree-node-hover-bg, --theme-secondary-color-hover);
@tree-node-selected-bg: var(--tree-node-selected-bg, #dce1fa); // @primary-2

//Button
// ---
@btn-border-radius-base: var(--btn-border-radius-base);
@btn-default-color: var(--theme-text-color);
@btn-default-bg: var(--color-gray-1);
@btn-default-border: var(--color-gray-5);
@btn-primary-color: var(--color-gray-1);
@btn-primary-bg: var(--color-brand-6);
@btn-shadow: 0 2px 0 rgba(0, 0, 0, 0);
@btn-line-height: 1.5;
@btn-disable-color: var(--btn-disable-color);
@btn-disable-bg: var(--btn-disable-bg);
@btn-disable-border: var(--btn-disable-border);
@btn-font-size-lg: 16px;
@btn-padding-horizontal-base: 15px;
@btn-padding-horizontal-lg: 20px;

// Tooltip
// ---
// Tooltip text color
@tooltip-color: var(--tooltip-color);
// Tooltip background color
@tooltip-bg: var(--tooltip-bg);

// Outline
// ---
@outline-width: 0;
@outline-blur-size: 0;
@outline-color: var(--theme-border-focus-color);

// Form
// ---
@label-color: var(--color-gray-9);
@form-item-margin-bottom: 20px;
@form-error-input-bg: var(--color-error-1);
@form-item-label-colon-margin-right: 0;

// Tabs
// ---
@tabs-active-color: var(--link-color);
@tabs-hover-color: var(--link-color);
@table-header-color: var(--theme-heading-color);
@tabs-title-font-size: 14px;
@tabs-card-horizontal-padding: 11px 10px;

// Box-shadow
// ---
// 与antd的相同，另外theme定了这个值，覆盖另外theme
@shadow-2: 0 3px 6px -4px rgba(0, 0, 0, .12), 0 6px 16px 0 rgba(0, 0, 0, .08),
    0 9px 28px 8px rgba(0, 0, 0, .05);

// Avatar
// --
@avatar-size-sm: 16px;
@avatar-size-base: 24px;
@avatar-size-lg: 32px;
@avatar-font-size-sm: 12px;
@avatar-font-size-base: 12px;
@avatar-font-size-lg: 14px;

// Tag
@tag-default-bg: var(--tag-default-bg);
@tag-default-color: @text-color;
@tag-font-size: @font-size-sm;
@tag-line-height: 22px;

// Pagination
//--
@pagination-item-bg-active: var(--color-brand-1);

// Badge
// ---
@badge-color: var(--color-error-6);

// Radio
// ---
@radio-focus-shadow: 0 0 0 0 var(--theme-border-focus-color);
@radio-duration: 0;
@radio-button-hover-color: var(--radio-button-hover-color);
@radio-dot-size: 10px;

// Modal
// ---
@modal-header-bg: var(--modal-header-bg);
@modal-header-close-size: var(--modal-header-close-size);
@modal-header-border-color-split: var(--modal-header-bg);
@modal-body-padding: 30px 0;
@modal-footer-padding-vertical: 15px;
@modal-footer-padding-horizontal: 20px;
@modal-confirm-body-padding: 40px 30px 15px 30px;

// Drawer
// ---
@drawer-header-padding: 20px;
@drawer-body-padding: 20px;
@drawer-footer-padding-vertical: 10px;
@drawer-footer-padding-horizontal: 20px;

// Timeline
// ---
@timeline-width: 1px;

// Progress
// ---
@progress-default-color: var(--theme-primary-color);
@progress-text-color: var(--progress-text-color);
@progress-radius: var(--progress-radius);

// DatePicker
@picker-basic-cell-active-with-range-color: var(--color-brand-1);

// Slider
// ---
@slider-handle-border-width: 1px;
@slider-trace-background-color: var(--theme-primary-color);
@slider-trace-background-color-hover: var(--theme-primary-color-hover);
@slider-rail-background-color: var(--color-brand-1);
@slider-rail-background-color-hover: var(--color-brand-1);

// Cascader
// ---
@cascader-item-selected-bg: var(--theme-secondary-color);

// Steps
// ---
@steps-icon-margin: 0 10px 0 0;
@steps-small-icon-margin: 0 10px 0 0;
@steps-icon-font-size: @font-size-lg;
@steps-icon-size: 30px;

// Tree
// ---
@tree-node-hover-bg: var(--color-brand-1);
@tree-node-selected-bg: var(--theme-component-bg);

// Badge
// --
@badge-height: 16px;

// Breadcrumb
// ---
@breadcrumb-link-color-hover: var(--theme-primary-color);
@breadcrumb-separator-margin: 0 4px;

// Steps
// ---
@steps-icon-size: 24px;

// Dropdown
// ---
@dropdown-line-height: 20px;

